fix: 修复CEV问题，兼容版本代码